<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/et_lusername"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="#ffff"
        android:drawableLeft="@drawable/username"
        android:hint="@string/user_name"
        android:inputType="text"
        android:padding="2dp" />

    <EditText
        android:id="@+id/et_lpassword"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="#ffff"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_llogin"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#04ea00"
        android:text="@string/login"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_registered"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_lregister"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/register"
            android:textColor="#04ea00"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
